# mediatek_flash_tool

./: .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  TC-mingw.cmake
flash_tool/: args.c  args.h  io_handler.c  main.c  util.c  util.h
include/: mtk_device.h  mtk_preloader.h
src/: mtk_da.c  mtk_device.c  mtk_preloader.c
